--- a/XOR.ipynb
+++ b/XOR.ipynb
@@ -44,11 +44,9 @@
     "xor.add(Dense(2))\n",
     "xor.add(Activation(\"sigmoid\"))\n",
     "\n",
-    "# Specify loss as \"binary_crossentropy\", optimizer as \"adam\",\n",
-    "# and add the accuracy metric\n",
     "xor.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics=[\"accuracy\"])\n",
     "\n",
-    "# Uncomment this line to print the model architecture\n",
+    "# To print the model architecture\n",
     "xor.summary()\n",
     "\n",
     "# Fitting the model\n",
