--- a/Mini Project - Sentiment Analysis.ipynb
+++ b/Mini Project - Sentiment Analysis.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### STEP #1: Load data"
+    "### STEP #1: Load data\n",
+    "\n",
+    "https://keras.io/datasets/#imdb-movie-reviews-sentiment-classification <-- how to load and what params to call (here, looking at 1000 most frequently used words)"
    ]
   },
   {
