test: first run

--- a/Capstone/UnsupervisedApproach.ipynb
+++ b/Capstone/UnsupervisedApproach.ipynb
@@ -15,9 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -26,15 +24,13 @@
     "import cv2\n",
     "import os\n",
     "import numpy as np\n",
-    "#from keras.preprocessing import image     "
+    "from keras.preprocessing import image     "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#STEP #1: Download images\n",
@@ -67,9 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#download_images( train_data, 'train','jpg')\n",
@@ -79,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_dataset(inputpath):\n",
@@ -90,7 +82,7 @@
     "        #print(\"Files in this '\" + inputpath + \"' dir is \" + str(len(filenames)))\n",
     "        for filename in filenames:\n",
     "            img_path = os.path.join(dirpath,filename)\n",
-    "            img = image.load_img(img_path, target_size=(128,128))#,grayscale=True) #rescaling images to 224x224\n",
+    "            img = image.load_img(img_path, target_size=(224,224))#,grayscale=True) #rescaling images to 224x224\n",
     "            x = image.img_to_array(img)\n",
     "            list_of_tensors.append(np.expand_dims(x, axis=0))\n",
     "    return np.vstack(list_of_tensors)"
@@ -99,9 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from keras.layers import Input, Dense\n",
@@ -109,47 +99,47 @@
     "from keras import regularizers\n",
     "\n",
     "# this is the size of our encoded representations\n",
-    "encoding_dim = 2000  # 2048 floats -> compression of factor 73.5, assuming the input is 150528 floats\n",
+    "encoding_dim = 6000  # 6000 floats -> compression of factor 25.088, assuming the input is 150528 floats\n",
     "\n",
     "# this is our input placeholder\n",
-    "input_img = Input(shape=(49152,))\n",
-    "encoded = Dense(256, activation='relu')(input_img)\n",
-    "encoded = Dense(128, activation='relu')(encoded)\n",
-    "encoded = Dense(64, activation='relu')(encoded)\n",
+    "input_img = Input(shape=(150528,))\n",
+    "encoded = Dense(encoding_dim, activation='relu')(input_img)\n",
+    "decoded = Dense(150528, activation='sigmoid')(encoded)\n",
     "\n",
-    "decoded = Dense(128, activation='relu')(encoded)\n",
-    "decoded = Dense(256, activation='relu')(decoded)\n",
-    "decoded = Dense(49152, activation='sigmoid')(decoded)\n"
+    "# this model maps an input to its reconstruction\n",
+    "autoencoder = Model(input_img, decoded)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# this model maps an input to its reconstruction\n",
-    "autoencoder = Model(input_img, decoded)\n",
-    "\n",
     "# this model maps an input to its encoded representation\n",
-    "# encoder = Model(input_img, encoded)\n",
+    "encoder = Model(input_img, encoded)\n",
     "\n",
     "# # create a placeholder for an encoded (32-dimensional) input\n",
-    "# encoded_input = Input(shape=(encoding_dim,))\n",
+    "encoded_input = Input(shape=(encoding_dim,))\n",
     "# # retrieve the last layer of the autoencoder model\n",
-    "# decoder_layer = autoencoder.layers[-1]\n",
+    "decoder_layer = autoencoder.layers[-1]\n",
     "# # create the decoder model\n",
-    "# decoder = Model(encoded_input, decoder_layer(encoded_input))"
+    "decoder = Model(encoded_input, decoder_layer(encoded_input))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autoencoder.compile(optimizer='adadelta', loss='binary_crossentropy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "x_train = load_dataset('train')\n",
@@ -162,47 +152,14 @@
     "x_train_f = x_train_f.reshape((len(x_train_f), np.prod(x_train_f.shape[1:])))\n",
     "x_test_f = x_test_f.reshape((len(x_test_f), np.prod(x_test_f.shape[1:])))\n",
     "\n",
-    "print(\"Training set: \", x_train.shape)\n",
-    "print(\"Testing set: \", x_test.shape)"
+    "print(\"Training set: \", x_train_f.shape)\n",
+    "print(\"Testing set: \", x_test_f.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "autoencoder.compile(optimizer='adadelta', loss='binary_crossentropy')\n",
-    "autoencoder.fit(x_train_f, x_train_f, epochs=100, batch_size=256,  shuffle=True, validation_data=(x_test_f, x_test_f))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# encode and decode some images\n",
-    "# note that we take them from the *test* set\n",
-    "# encoded_imgs = encoder.predict(x_test_f)\n",
-    "# decoded_imgs = decoder.predict(encoded_imgs)\n",
-    "# print(encoded_imgs.shape)\n",
-    "# print(decoded_imgs.shape)\n",
-    "decoded_imgs = autoencoder.predict(x_test_f)\n",
-    "print(decoded_imgs.shape)\n",
-    "print(x_test_f.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
@@ -214,9 +171,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "autoencoder.fit(x_train_f, x_train_f, epochs=10, batch_size=500,  shuffle=True, validation_data=(x_test_f, x_test_f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# encode and decode some images\n",
+    "# note that we take them from the *test* set\n",
+    "encoded_imgs = encoder.predict(x_test_f)\n",
+    "decoded_imgs = decoder.predict(encoded_imgs)\n",
+    "#print(encoded_imgs.shape)\n",
+    "\n",
+    "decoded_imgs = autoencoder.predict(x_test_f)\n",
+    "#print(decoded_imgs.shape)\n",
+    "#print(x_test_f.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -243,9 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -266,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
